--- a/src/components/BottomBar/bottombar.css
+++ b/src/components/BottomBar/bottombar.css
@@ -15,12 +15,14 @@
         grid-template: 15px;
         color: white;
         cursor: pointer;
+        margin-inline: 10px;
 
         .bg-circle-white {
             border-radius: 50%;
             padding: 0 5px;
             color: black;
             background-color: white;
+            margin-right: 5px;
         }
 
     }
