--- a/src/components/TopBar/topbar.css
+++ b/src/components/TopBar/topbar.css
@@ -23,6 +23,7 @@
 
     .caught-seen {
         display: flex;
+        flex-direction: row;
         align-items: center;
 
         .caught, .seen {
