--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,13 @@
     width: 30px;
     height: 30px;
     margin-inline: 5px;
+    filter: drop-shadow(0px 0px 1px black);
+
     &.modal {
         margin-inline: 20px;
     }
 }
+
 .invert {
     filter: invert(1);
 }
@@ -152,7 +155,7 @@
             height: 65px;
             border-radius: 5px;
             background: linear-gradient(135deg, #f0501d 40%, black 40%);
-            
+
             &.modal {
                 justify-content: space-between;
             }
@@ -343,14 +346,15 @@
             flex-direction: row;
             align-items: center;
             height: 100%;
-            
-            &.modalcard{
+
+            &.modalcard {
                 width: 100%;
             }
         }
     }
 
 }
+
 /* BOTTOMBAR */
 .bottombar {
     display: flex;
